--- a/MDK-ARM/dds_stmf4/dds_stmf4.build_log.htm
+++ b/MDK-ARM/dds_stmf4/dds_stmf4.build_log.htm
@@ -17,45 +17,16 @@ Library Manager: ArmAr.exe V5.06 update 7 (build 960)
 Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
 CPU DLL:         SARMCM3.DLL V5.38.0.0
 Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
+Target DLL:      Segger\JL2CM3.dll V2.99.42.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 C:\Users\admin\Documents\stm32\dds_stmf4\MDK-ARM\dds_stmf4.uvprojx
-Project File Date:  04/08/2025
+Project File Date:  04/09/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARM_Compiler_5.06u7\Bin'
-Rebuild target 'dds_stmf4'
-assembling startup_stm32f411xe.s...
-compiling stm32f4xx_it.c...
-compiling main.c...
-compiling stm32f4xx_hal_msp.c...
-compiling stm32f4xx_hal_i2c_ex.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_i2c.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_rtc.c...
-compiling stm32f4xx_hal_rtc_ex.c...
-compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_spi.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal_uart.c...
-linking...
-Program Size: Code=9522 RO-data=474 RW-data=16 ZI-data=2848  
-FromELF: creating hex file...
+Build target 'dds_stmf4'
 "dds_stmf4\dds_stmf4.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -80,7 +51,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:44
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
