--- a/MDK-ARM/dds_stmf4/dds_stmf4.build_log.htm
+++ b/MDK-ARM/dds_stmf4/dds_stmf4.build_log.htm
@@ -22,11 +22,15 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 C:\Users\admin\Documents\stm32\dds_stmf4\MDK-ARM\dds_stmf4.uvprojx
-Project File Date:  04/09/2025
+Project File Date:  04/11/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARM_Compiler_5.06u7\Bin'
 Build target 'dds_stmf4'
+compiling main.c...
+linking...
+Program Size: Code=10134 RO-data=474 RW-data=32 ZI-data=2864  
+FromELF: creating hex file...
 "dds_stmf4\dds_stmf4.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
